--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@ header {
 
 /* can i make it sticky?? */
 .nav-bar {
-    background: gray;
+    background: white;
     display: flex;
     flex-direction: row;
     border-bottom: 1px solid #e2e2e2;
@@ -20,6 +20,12 @@ header {
     justify-content: space-between;
     position: relative;
     /* relative vs absolute */
+}
+.header-first-three-icons {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 13rem;
 }
 .three-line-icon {
     width: 1.3rem;
@@ -43,7 +49,7 @@ header {
     -webkit-transition: ease 0.6s;
     transition: ease 0.6s;
     white-space: nowrap;
-    vertical-align: middle;
+    /* vertical-align: middle; */
     background-color: transparent;
     color: #000;
     font-size: 11px;
@@ -53,25 +59,62 @@ header {
     -moz-letter-spacing: 0.02em;
     -ms-letter-spacing: 0.02em; */
     letter-spacing: 0.02em;
-    padding: 11px 12px 8px;
+    padding: 0 0 11px;
+    /* margin-left: 18px; */
     border: 0;
     -webkit-appearance: button;
+    align-content: flex-start;
+    justify-content: flex-start;
+
 }
 .search-button svg {
-    display: inline-block;
+    display: flex;
     height: 16px;
-    vertical-align: sub;
+    /* vertical-align: sub; */
     width: 16px;
+}
+                            /* letters need to be taller */
+.space-link {
+    text-decoration: none;
+    color: black;
+    font-size: 14.25px;
+    font-family: nyt-franklin,helvetica,arial,sans-serif;
+    font-weight: 700;
+    text-transform: uppercase;
+    -webkit-letter-spacing: 0.7px;
+    -moz-letter-spacing: 0.7px;
+    -ms-letter-spacing: 0.7px;
+    letter-spacing: 0.7px;
+    line-height: 19px;
+}
+.header-buttons button {
+    background-color: #567b95;
+    border: 1px solid #326891;
+    color: #fff;
+    text-transform: uppercase;
+    border-radius: 3px;
+    font-family: nyt-franklin,helvetica,arial,sans-serif;
+    /* transition: ease 0.6s; WHAT DOES THIS DO? */
+    font-size: 11px;
+    line-height: 11px;
+    font-weight: 700;
+    padding: 11px 12px 8px;
+    cursor: pointer;
+}
+.header-buttons a {
+    width: 100%;
+    text-decoration: none;
+
 }
 
 /* i got rid of this but ... it's for the buttons? */
-.user-links {
+/* .user-links {
     background: pink;
     display: flex;
     font-size: 11px;
     font-family: nyt-franklin,helvetica,arial,sans-serif;
     padding: 13px 20px 12px;
-}
+} */
 
 /* more space between box and topbar */
 /* space between title and image looks ok! */
