--- a/styles.css
+++ b/styles.css
@@ -6,9 +6,8 @@ html {
 header {
     display: flex;
     flex-direction: column;
-    background: black;
+    /* background: black; */
 }
-
 /* can i make it sticky?? */
 .nav-bar {
     background: white;
@@ -16,7 +15,7 @@ header {
     flex-direction: row;
     border-bottom: 1px solid #e2e2e2;
     height: 36px;
-    padding: 8px 15px 3px;
+    padding: 0 15px 3px 8px;
     justify-content: space-between;
     position: relative;
     /* relative vs absolute */
@@ -26,9 +25,11 @@ header {
     flex-direction: row;
     justify-content: space-between;
     width: 13rem;
+    align-items: center;
 }
 .three-line-icon {
     width: 1.3rem;
+    margin-top: -.1em;
 }
 .button-dissapear {
     border: 0;
@@ -61,6 +62,7 @@ header {
     letter-spacing: 0.02em;
     padding: 0 0 11px;
     /* margin-left: 18px; */
+    margin-top: .75em;
     border: 0;
     -webkit-appearance: button;
     align-content: flex-start;
@@ -84,8 +86,9 @@ header {
     -webkit-letter-spacing: 0.7px;
     -moz-letter-spacing: 0.7px;
     -ms-letter-spacing: 0.7px;
-    letter-spacing: 0.7px;
+    letter-spacing: 0.6px;
     line-height: 19px;
+    /* this doesnt work quite right :( letters dont look right */
 }
 .header-buttons button {
     background-color: #567b95;
@@ -104,8 +107,8 @@ header {
 .header-buttons a {
     width: 100%;
     text-decoration: none;
-
 }
+/* END HEADER SECTION */
 
 /* i got rid of this but ... it's for the buttons? */
 /* .user-links {
@@ -119,17 +122,18 @@ header {
 /* more space between box and topbar */
 /* space between title and image looks ok! */
 .article-title-box {
-    background: blue;
+    background: white;
     display: flex;
+    flex-wrap: nowrap;
     line-height: 2.25rem;
-    margin: 0 20px 1rem;
-    margin-bottom: 1.65rem;
+    margin: 20px 20px 15px;
+    /* margin-bottom: 1.65rem; */
     width: calc(100% - 40px);
     position: relative;
     /* position???? */
-    margin-left: 20px;
-    margin-right: 20px;
-    align-items: center;
+    /* margin-left: 20px; */
+    /* margin-right: 20px; */
+    /* align-items: center; */
     justify-content: center;
 }
     /* font & size isnt quite right */
@@ -140,9 +144,9 @@ header {
     font-family: nyt-cheltenham,georgia,'times new roman',times,serif;
     font-weight: 700;
     font-style: italic;
-    font-size: 1.9375rem;
+    font-size: 40px;
     text-align: left;
-    max-width: 383.777px;
+    max-width: 500px;
 }
 
 .main-image-container {
