--- a/styles.css
+++ b/styles.css
@@ -154,12 +154,12 @@ header {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background: green;
-    position: relative;
+    /* background: green; */
+    /* position: relative; */
     /* margin: 43px auto; */
     margin-block-start: 1em;
     margin-block-end: 1em;
-    margin-inline-start: 40px;
+    /* margin-inline-start: 40px; */
     margin-inline-end: 40px;
     max-width: 1200px;
 }
@@ -167,8 +167,8 @@ header {
 .main-image {
     /* height: 407.25px; */
     width: 900px;
-     max-width: 1200px; /*this was in the weird css for the pic. the html has diff :(*/
-     min-width: 600px; /*theres some weird size stuff in the html for the pic */
+    max-width: 1200px; /*this was in the weird css for the pic. the html has diff :(*/
+    min-width: 600px; /*theres some weird size stuff in the html for the pic */
     vertical-align: top;
     /* work w whatever display im using? */
 }
@@ -201,22 +201,24 @@ header {
 
 .mn-img-subtitle-box {
     display: flex;
-    flex-direction: row;
-    background: rosybrown;
-    margin: 10px 20px 0;
+    flex-direction: column;
+    margin-left: -17.5em;
+    /* background: rosybrown; */
+    /* margin: 10px 20px 0; */
     align-content: flex-start;
 /* this is figcaption, so maybe i want ome styles for all of them? */
     color: #666;
     font-family: nyt-imperial,georgia,'times new roman',times,serif;
-    margin: 10px 20px 0;
-    text-align: left;    
+    /* margin: 10px 20px 0; */
+    text-align: left; 
+    /* max-width: 900px;    */
 }
 
 .mn-img-subtitle {
     margin-right: 7px;
     color: #666;
     font-family: nyt-imperial,georgia,'times new roman',times,serif;
-    font-size: 0.875rem;
+    font-size: 0.975rem;
     line-height: 1.125rem;
     text-align: left;
 }
@@ -226,6 +228,7 @@ header {
     font-family: nyt-imperial,georgia,'times new roman',times,serif;
     line-height: 1.125rem;
     vertical-align: baseline;
+    font-size: .8125rem;
 }
 
 
@@ -233,7 +236,12 @@ header {
 .top-article-info {
     align-self: center;
     display: grid;
-    background: indianred;
+    grid-template-columns: 145px 455px;
+    grid-template-rows: 35px 35px;
+    /*              USEFUL FOR SETTING NEEDED SPACE AROUND ELEMENTS grid-column-gap: ; */
+    justify-items: left;
+    justify-content: flex-start;
+    /* background: indianred; */
     margin-bottom: 20px;
     color: #121212;
     width: calc(100% - 40px);
@@ -241,32 +249,109 @@ header {
 }
 
 /* author info */
-.top-article-info:first-child {
+.top-article-info div:first-of-type {
     display: flex;
-    align-items: center;
+    /* align-items: center; */
     margin-bottom: 15px;
-
+    margin-top: 15px;
+    font-size: 0.875rem;
+    font-weight: 600;
+}
+.top-article-info .article-date {
+    /* display: ; */
+    grid-column-start: 1;
+    grid-row-start: 2;
+}
+.top-article-info a {
+    text-decoration: underline solid #ccc;
+    /* text-emphasis: none; */
+    color: black;
+    letter-spacing: .02em;
+    align-self: center;
 }
 li {
     list-style-type: none;
 }
-
-/* date & share links */
-/* is last child the container or ul? */
-.top-article-info:last-child {
-    display: flex;
+.top-article-info ul:first-of-type {
+    justify-self: start;
+    padding: 0;
+    font-family: nyt-franklin,helvetica,arial,sans-serif;
+    font-weight: 500;
+    color: #333;
+    margin-bottom: 1rem;
+    font-size: 0.8125rem;
+    line-height: 1rem;
+    /* grid-column-start: 2; */
+    /* grid-row-start: 2; */
+}
+.social-links {
+    grid-column-start: 2;
+    grid-row-start: 2;
+    justify-self: end;
 }
 
+.top-article-info .social-links ul {
+    display: flex;
+    flex-direction: row;
+}
+.social-links li {
+    background: rgb(231, 231, 231);
+    display: flex;
+    width: 28px;
+    height: 28px;
+    border-radius: 50%;
+    margin-right: 15px;
+    /* align-self: center; */
+    justify-content: center;
+}
+.no-backgrnd {
+    background: none !important;
+}
+.social-links button {
+    background: none;
+    border: none;
+}
+.comm-btn {
+    border: 1px solid rgb(102, 102, 102) !important;
+    border-radius: 4px;
+
+    /* this should have a tail!!!! */
+}
+.comm-btn::before {
+    border: 4px solid rgb(102, 102, 102);
+    border-bottom: 4px solid transparent;
+    border-left: 4px solid transparent;
+    bottom: -8px;
+    right: 8px;
+    content: '';
+    position: absolute;
+}
+.comm-btn::after {
+    content: '';
+    position: absolute;
+    border: 3px solid rgb(255, 255, 255);
+    border-bottom: 3px solid transparent;
+    border-left: 3px solid transparent;
+    bottom: -5px;
+    right: 9px;
+}
 
 .grid {
     display: flex;
     flex-direction: column;
 }
 .article-body {
-    background: lightseagreen;
+    /* background: lightseagreen; */
     align-self: center;
     width: calc(100% - 40px);
     max-width: 600px;
+}
+.article-body p {
+    margin-bottom: 0.78125rem;
+    font-family: nyt-imperial,georgia,'times new roman',times,serif;
+    font-size: 1.125rem;
+    line-height: 1.5625rem;
+    
 }
 
 
