--- a/styles.css
+++ b/styles.css
@@ -447,6 +447,31 @@ li {
     flex-direction: column;
     background: pink;
 }
+figure {
+    width: 100%;
+    margin: 0;
+    margin-bottom: 43px;
+}
+figure figcaption {
+    font-family: nyt-imperial, georgia, "times new roman", times, serif;
+    color: rgb(102, 102, 102);
+    text-align: left;
+    margin: 10px 0 0px;
+}
+figure figcaption span:first-of-type {
+    font-size: 0.9375rem;
+    line-height: 1.25rem;
+}
+figure figcaption span:last-of-type {
+    color: rgb(136, 136, 136);
+    font-family: nyt-imperial, georgia, "times new roman", times, serif;
+    line-height: 1.125rem;
+    letter-spacing: 0.01em;
+    font-size: .85rem;
+}
+/* figcaption isnt quite set right */
+
+
 
 .nav-elements-box header {
     height: 44px;
