--- a/styles.css
+++ b/styles.css
@@ -476,7 +476,7 @@ margin-bottom: 0
 footer {
     margin-top: 24px;
 }
-hr {
+.footer-hr {
     width: 10%;
     margin-left: 0;
     color: #000;
@@ -491,9 +491,34 @@ hr {
 }
 
 
+.vid-box {
+    margin: 43px auto;
+}
+.vid-box figcaption {
+    color: #666;
+    font-family: nyt-imperial,georgia,'times new roman',times,serif;
+    margin: 10px 0 0;
+    width: 97%;
+    text-align: left;
+}
+.vid-box figcaption span:first-of-type {
+    margin-right: 7px;
+    color: #666;
+    font-family: nyt-imperial,georgia,'times new roman',times,serif;
+    font-size: 1rem;
+    line-height: 1.125rem;
+}
+.vid-box figcaption:nth-child(2) {
+    font-size: 0.85rem;
+    color: #888;
+    font-family: nyt-imperial,georgia,'times new roman',times,serif;
+    line-height: 1.125rem;
+}
 
-figure {
-    position: absolute;
+
+
+.bicep-2 {
+    position: relative;
     /* margin-top: 1620px;
     margin-left: -200px; */
 
@@ -501,17 +526,17 @@ figure {
     margin: 0;
     margin-bottom: 43px;
 }
-figure figcaption {
+.bicep-2 figcaption {
     font-family: nyt-imperial, georgia, "times new roman", times, serif;
     color: rgb(102, 102, 102);
     text-align: left;
     margin: 10px 0 0px;
 }
-figure figcaption span:first-of-type {
+.bicep-2 figcaption span:first-of-type {
     font-size: 0.9375rem;
     line-height: 1.25rem;
 }
-figure figcaption span:last-of-type {
+.bicep-2 figcaption span:last-of-type {
     color: rgb(136, 136, 136);
     font-family: nyt-imperial, georgia, "times new roman", times, serif;
     line-height: 1.125rem;
