finished bottom of article social links

--- a/styles.css
+++ b/styles.css
@@ -238,10 +238,8 @@ header {
     display: grid;
     grid-template-columns: 145px 455px;
     grid-template-rows: 35px 35px;
-    /*              USEFUL FOR SETTING NEEDED SPACE AROUND ELEMENTS grid-column-gap: ; */
     justify-items: left;
     justify-content: flex-start;
-    /* background: indianred; */
     margin-bottom: 20px;
     color: #121212;
     width: calc(100% - 40px);
@@ -256,6 +254,9 @@ header {
     margin-top: 15px;
     font-size: 0.875rem;
     font-weight: 600;
+}
+.top-article-info div:first-of-type a {
+    margin-top: 12px;
 }
 .top-article-info .article-date {
     /* display: ; */
@@ -574,7 +575,7 @@ footer {
 }
 
 /* needs to be specfic to olny1st btn */
-.bottom-social-links button:first-of-type {
+.bottom-social-links .read-comm-btn {
     grid-column: 1/2;
     width: 100%;
     background-color: rgb(86, 123, 149);
@@ -595,22 +596,44 @@ footer {
 }
 /* work on this */
 
-.bottom-social-links li:nth-of-type(2), .bottom-social-links li:nth-of-type(3), .bottom-social-links li:nth-of-type(4), .bottom-social-links li:nth-of-type(5) {
+/* .bottom-social-links li:nth-of-type(2), .bottom-social-links li:nth-of-type(3), .bottom-social-links li:nth-of-type(4), .bottom-social-links li:nth-of-type(5) { */
+    /* grid-column: 3/4;
+    grid-row: 1/1;
+} */
+.only-social-box {
+    display: flex;
+    flex-direction: row;
     grid-column: 3/4;
     grid-row: 1/1;
 }
-
-
-.only-social {
+.only-social-box li {
     background: rgb(231, 231, 231);
     display: flex;
     width: 28px;
     height: 28px;
     border-radius: 50%;
     margin-right: 15px;
-    /* align-self: center; */
+    /* align-content: center; */
     justify-content: center;
     grid-column: 3/4;
+}
+.only-social-box li a {
+    align-self: center;
+}
+.only-social-box svg {
+    height: 15px;
+    vertical-align: middle;
+    width: 15px;
+    background-color: #eee;
+    border: 1px #eee solid;
+    border-radius: 100%;
+    padding: 5px;
+    width: 15px;
+    height: 15px;
+}
+.only-social-box button {
+    background: none;
+    border: none;
 }
 
 
